# Ai-Doctor-LLM-base-Medical-Chatbot-Using-Langchain-for-Indus-Hospital

./: .env  README.md  add_structure.sh  app.py  database_process.py  pyproject.toml  requirements.txt
images/: recording.mkv
medical_chatbot.egg-info/: PKG-INFO
src/: helper.py  prompt.py
src/medical_chatbot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
static/: style.css
templates/: chat.html
